--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
 	<body>
 	<div class="mb-3">
   <label for="exampleFormControlInput1" class="form-label">Endereço de email</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@examplo.com">
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
 </div>
 <div class="mb-3">
   <label for="exampleFormControlTextarea1" class="form-label">Exemplo de bloco de texto</label>
