--- a/form.html
+++ b/form.html
@@ -5,7 +5,6 @@
 		<title></title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
 		crossorigin="anonymous">
-	
 	</head>
 	<body>
 	<div class="mb-3">
@@ -13,8 +12,9 @@
   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
 </div>
 <div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Exemplo de bloco de texto</label>
+  <label for="exampleFormControlTextarea1" class="form-label">Exemplo de bloco de notas</label>
   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 </div>
+</form>
 </body>
 </html>
